# r510-command-center

./: .gitignore  LICENSE  README.md  command-center  install.sh  pyproject.toml  uninstall.sh
assets/: ai_core.txt  banner.txt  earth.txt
command_center/: __init__.py  actions.py  activity.py  animation.py  app.py  config.py  fly.py  ollama.py  rendering.py  screens.py  telemetry.py
tests/: test_activity.py  test_ai_activity.py  test_config.py  test_debug_overlay.py  test_flow.py  test_fly.py  test_layout.py  test_ollama.py  test_smoke.py  test_telemetry.py  test_tmux.py
